--- a/src/main/resources/org/stacyliu/foodbuddy/foodBuddy.fxml
+++ b/src/main/resources/org/stacyliu/foodbuddy/foodBuddy.fxml
@@ -58,31 +58,62 @@
         <tabs>
           <Tab onSelectionChanged="#handleTabSelectionChanged" text="Home">
                <content>
-                  <AnchorPane>
+                  <AnchorPane maxHeight="1.7976931348623157E308">
                      <children>
-                        <TreeTableView fx:id="homeTreeTableView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <columns>
-                              <TreeTableColumn fx:id="homeCategoryTreeTableColumn" editable="false" prefWidth="75.0" sortable="false" text="Category" />
-                            <TreeTableColumn fx:id="homeFoodTreeTableColumn" prefWidth="75.0" text="Food" />
-                            <TreeTableColumn fx:id="homeCountTreeTableColumn" prefWidth="45.33331298828125" text="Count" />
-                              <TreeTableColumn fx:id="homeDaysLeftTableColumn" prefWidth="75.0" text="Days Left" />
-                          </columns>
-                        </TreeTableView>
-                        <AnchorPane layoutX="274.0" prefHeight="354.0" prefWidth="358.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <Label alignment="CENTER" layoutX="272.0" prefHeight="27.0" text="Recipe" textAlignment="CENTER" AnchorPane.leftAnchor="272.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TreeTableView fx:id="homeTreeTableView" VBox.vgrow="ALWAYS">
+                                <columns>
+                                    <TreeTableColumn fx:id="homeCategoryTreeTableColumn" editable="false" prefWidth="75.0" sortable="false" text="Category" />
+                                  <TreeTableColumn fx:id="homeFoodTreeTableColumn" prefWidth="75.0" text="Food" />
+                                  <TreeTableColumn fx:id="homeCountTreeTableColumn" prefWidth="45.33331298828125" text="Count" />
+                                    <TreeTableColumn fx:id="homeDaysLeftTableColumn" prefWidth="75.0" text="Days Left" />
+                                </columns>
+                              </TreeTableView>
+                              <HBox maxHeight="1.7976931348623157E308">
+                                 <children>
+                                    <Button fx:id="cancelButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleCancelButtonAction" prefHeight="23.0" prefWidth="60.0" text="Cancel" visible="false">
+                                       <HBox.margin>
+                                          <Insets left="5.0" />
+                                       </HBox.margin></Button>
+                                    <Button fx:id="minusButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleMinusButtonAction" prefHeight="23.0" prefWidth="25.0" text="-" visible="false">
+                                       <HBox.margin>
+                                          <Insets left="40.0" />
+                                       </HBox.margin>
+                                       <font>
+                                          <Font name="System Bold" size="12.0" />
+                                       </font></Button>
+                                    <Button fx:id="plusButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handlePlusButtonAction" prefHeight="23.0" prefWidth="25.0" text="+" visible="false">
+                                       <HBox.margin>
+                                          <Insets left="10.0" />
+                                       </HBox.margin></Button>
+                                    <Button fx:id="editButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleEditButtonAction" prefHeight="23.0" prefWidth="60.0" text="Edit">
+                                       <HBox.margin>
+                                          <Insets left="45.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" top="5.0" />
+                                 </VBox.margin>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <AnchorPane layoutX="272.0" prefHeight="371.0" prefWidth="368.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="273.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <Label alignment="CENTER" layoutX="272.0" prefHeight="27.0" text="Recipe" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <font>
                                     <Font name="System Bold" size="12.0" />
                                  </font>
                               </Label>
-                              <Accordion layoutX="273.3333333333333" layoutY="30.0" prefHeight="343.0" prefWidth="367.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="273.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="27.33333333333337">
-                                <panes> <TitledPane fx:id="titledPane1" animated="true" text="untitled 1" expanded="true">
+                              <Accordion fx:id="accordion" layoutX="273.3333333333333" layoutY="30.0" prefHeight="343.0" prefWidth="367.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="27.33333333333337">
+                                <panes> <TitledPane fx:id="titledPane1" animated="true" expanded="true" text="untitled 1">
                                     <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                              <children>
                                                 <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                    <children>
-                                                      <Label fx:id="recipe1Name" maxWidth="Infinity" prefHeight="30.0" prefWidth="350.0" text="Label" alignment="CENTER">
+                                                      <Label fx:id="recipe1Name" alignment="CENTER" maxWidth="Infinity" prefHeight="30.0" prefWidth="350.0" text="Label">
                                                          <VBox.margin>
                                                             <Insets bottom="5.0" left="5.0" right="5.0" />
                                                          </VBox.margin>
@@ -90,12 +121,12 @@
                                                             <Font name="System Bold" size="14.0" />
                                                          </font>
                                                       </Label>
-                                                      <Label fx:id="recipe1Info" maxWidth="Infinity" prefHeight="20.0" prefWidth="350.0" text="Label" alignment="CENTER">
+                                                      <Label fx:id="recipe1Info" alignment="CENTER" maxWidth="Infinity" prefHeight="20.0" prefWidth="350.0" text="Label">
                                                          <VBox.margin>
                                                             <Insets bottom="5.0" left="5.0" right="5.0" />
                                                          </VBox.margin>
                                                       </Label>
-                                                      <Label fx:id="recipe1Ingredients" maxWidth="Infinity" prefHeight="25.0" prefWidth="350.0" text="Label" alignment="CENTER">
+                                                      <Label fx:id="recipe1Ingredients" alignment="CENTER" maxWidth="Infinity" prefHeight="25.0" prefWidth="350.0" text="Label">
                                                          <VBox.margin>
                                                             <Insets bottom="5.0" left="5.0" right="5.0" />
                                                          </VBox.margin>
@@ -116,7 +147,7 @@
                                              <children>
                                                 <VBox prefHeight="261.0" prefWidth="364.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                    <children>
-                                                      <Label fx:id="recipe2Name" maxWidth="Infinity" prefHeight="30.0" prefWidth="350.0" text="Label" alignment="CENTER">
+                                                      <Label fx:id="recipe2Name" alignment="CENTER" maxWidth="Infinity" prefHeight="30.0" prefWidth="350.0" text="Label">
                                                          <VBox.margin>
                                                             <Insets bottom="5.0" left="5.0" right="5.0" />
                                                          </VBox.margin>
@@ -124,12 +155,12 @@
                                                             <Font name="System Bold" size="14.0" />
                                                          </font>
                                                       </Label>
-                                                      <Label fx:id="recipe2Info" maxWidth="Infinity" prefHeight="20.0" prefWidth="350.0" text="Label" alignment="CENTER">
+                                                      <Label fx:id="recipe2Info" alignment="CENTER" maxWidth="Infinity" prefHeight="20.0" prefWidth="350.0" text="Label">
                                                          <VBox.margin>
                                                             <Insets bottom="5.0" left="5.0" right="5.0" />
                                                          </VBox.margin>
                                                       </Label>
-                                                      <Label fx:id="recipe2Ingredients" maxWidth="Infinity" prefHeight="25.0" prefWidth="350.0" text="Label" alignment="CENTER">
+                                                      <Label fx:id="recipe2Ingredients" alignment="CENTER" maxWidth="Infinity" prefHeight="25.0" prefWidth="350.0" text="Label">
                                                          <VBox.margin>
                                                             <Insets bottom="5.0" left="5.0" right="5.0" />
                                                          </VBox.margin>
@@ -150,7 +181,7 @@
                                              <children>
                                                 <VBox prefHeight="264.0" prefWidth="361.0" AnchorPane.bottomAnchor="-0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                    <children>
-                                                      <Label fx:id="recipe3Name" maxWidth="Infinity" prefHeight="30.0" prefWidth="350.0" text="Label" alignment="CENTER">
+                                                      <Label fx:id="recipe3Name" alignment="CENTER" maxWidth="Infinity" prefHeight="30.0" prefWidth="350.0" text="Label">
                                                          <VBox.margin>
                                                             <Insets bottom="5.0" left="5.0" right="5.0" />
                                                          </VBox.margin>
@@ -158,17 +189,17 @@
                                                             <Font name="System Bold" size="14.0" />
                                                          </font>
                                                       </Label>
-                                                      <Label fx:id="recipe3Info" maxWidth="Infinity" prefHeight="20.0" prefWidth="350.0" text="Label" alignment="CENTER">
+                                                      <Label fx:id="recipe3Info" alignment="CENTER" maxWidth="Infinity" prefHeight="20.0" prefWidth="350.0" text="Label">
                                                          <VBox.margin>
                                                             <Insets bottom="5.0" left="5.0" right="5.0" />
                                                          </VBox.margin>
                                                       </Label>
-                                                      <Label fx:id="recipe3Ingredients" maxWidth="Infinity" prefHeight="25.0" prefWidth="350.0" text="Label" alignment="CENTER">
+                                                      <Label fx:id="recipe3Ingredients" alignment="CENTER" maxWidth="Infinity" prefHeight="25.0" prefWidth="350.0" text="Label">
                                                          <VBox.margin>
                                                             <Insets bottom="5.0" left="5.0" right="5.0" />
                                                          </VBox.margin>
                                                       </Label>
-                                                      <TextArea fx:id="recipe3Instructions" >
+                                                      <TextArea fx:id="recipe3Instructions">
                                                          <VBox.margin>
                                                             <Insets left="5.0" right="5.0" />
                                                          </VBox.margin>
